@@ -17,7 +17,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -32,7 +31,7 @@ public class OrganisationService {
         return organisationRepository.findAll()
                 .stream()
                 .map(organisationMapper::organisationToOrganisationDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<Organisation> findById(UUID id) {
