@@ -1,51 +1,32 @@
 package com.predu.evertask.service;
 
-import com.predu.evertask.domain.dto.auth.UserDto;
-import com.predu.evertask.domain.dto.issue.IssueDto;
 import com.predu.evertask.domain.dto.project.ProjectCreateDto;
 import com.predu.evertask.domain.dto.project.ProjectDto;
 import com.predu.evertask.domain.dto.project.ProjectUpdateDto;
-import com.predu.evertask.domain.dto.sprint.SprintDto;
-import com.predu.evertask.domain.mapper.IssueMapper;
 import com.predu.evertask.domain.mapper.ProjectMapper;
-import com.predu.evertask.domain.mapper.SprintMapper;
-import com.predu.evertask.domain.mapper.UserViewMapper;
 import com.predu.evertask.domain.model.Project;
 import com.predu.evertask.domain.model.Role;
 import com.predu.evertask.domain.model.User;
 import com.predu.evertask.exception.NotFoundException;
-import com.predu.evertask.repository.IssueRepository;
 import com.predu.evertask.repository.ProjectRepository;
-import com.predu.evertask.repository.SprintRepository;
-import com.predu.evertask.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @RequiredArgsConstructor
 @Service
 public class ProjectService {
 
     private final ProjectRepository projectRepository;
-    private final UserRepository userRepository;
-    private final SprintRepository sprintRepository;
-    private final IssueRepository issueRepository;
-    private final UserViewMapper userViewMapper;
     private final ProjectMapper projectMapper;
-    private final SprintMapper sprintMapper;
-    private final IssueMapper issueMapper;
     private final RoleService roleService;
 
     public List<ProjectDto> findAll() {
         return projectRepository.findAll()
                 .stream()
                 .map(projectMapper::projectToProjectDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<ProjectDto> findById(UUID id) {
@@ -62,28 +43,7 @@ public class ProjectService {
         return projectRepository.findAllByOrganisationId(organisationId)
                 .stream()
                 .map(projectMapper::projectToProjectDto)
-                .collect(Collectors.toList());
-    }
-
-    public List<UserDto> getProjectActiveMembers(UUID projectId) {
-        return userRepository.findActiveProjectMembers(projectId)
-                .stream()
-                .map(userViewMapper::toUserDto)
-                .collect(Collectors.toList());
-    }
-
-    public List<SprintDto> getProjectSprints(UUID projectId) {
-        return sprintRepository.findAllByProjectIdOrderByOrdinalDesc(projectId)
-                .stream()
-                .map(sprintMapper::sprintToSprintDto)
-                .collect(Collectors.toList());
-    }
-
-    public List<IssueDto> getProjectLastIssues(UUID projectId) {
-        return issueRepository.findTop10ByProjectIdOrderByCreatedAtDesc(projectId)
-                .stream()
-                .map(issueMapper::issueToIssueDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Project create(ProjectCreateDto toSave, User user) {
